--- a/template/android/template/build.gradle
+++ b/template/android/template/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 		classpath 'com.android.tools.build:gradle:::ANDROID_GRADLE_PLUGIN::'
 	// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
+		classpath 'com.google.gms:google-services:4.4.4'
 	}
 }
 
