--- a/project/Build.xml
+++ b/project/Build.xml
@@ -16,10 +16,18 @@
 
 	<files id="iphone">
 		
-		<compilerflag value="-IiPhone/include"/>
+        <section if="iphoneos">
+            <compilerflag value="-F${haxelib:extension-appodeal}/dependencies/ios/Appodeal.xcframework/ios-arm64/" if="HXCPP_ARM64" />
+        </section>
+
+        <section if="iphonesim || simulator">
+            <compilerflag value="-F${haxelib:extension-appodeal}/dependencies/ios/Appodeal.xcframework/ios-arm64_x86_64-simulator/"/>
+        </section>
+
+        <compilerflag value="-IiPhone/include"/>
 		<compilerflag value="-Iinclude"/>
 		
-		<file name="iphone/Appodeal.mm"/>
+		<file name="iphone/AppodealExtension.mm"/>
 		
 	</files>
 	
